dev-credo-vis: Refactor scenario modal to a custom component rather than using MUI toggle button group to fix alignment and design issues

--- a/web/twa-vis-platform/code/src/ui/interaction/modal/scenario.module.css
+++ b/web/twa-vis-platform/code/src/ui/interaction/modal/scenario.module.css
@@ -9,12 +9,23 @@
 }
 
 .option-container {
+  padding: 0.75rem;
   display: grid;
   grid-template-columns: auto 1fr;
   /* Two columns: auto for circle, 1fr for content */
   gap: 20px;
   /* Gap between columns */
   align-items: start;
+  text-align: justify;
+  border-style: solid ;
+  border-color: var(--border-primary);
+  border-width: 1px 0 0;
+  color: var(--text-color-primary);
+  background: var(--background-primary);
+}
+.option-container:hover {
+  background: var(--background-tertiary);
+
 }
 
 .icon-container {
@@ -36,15 +47,18 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin: 0 0.5rem;
 }
 
 .title {
   font-size: 1.2rem;
   text-decoration: underline;
+  margin: 0.5rem 0;
 }
 
 .description {
   font-size: 0.9rem;
+  line-height: 1.5rem;
 }
 
 .refreshButton {
